# server/api/controllers/users/router.ts
@@ -4,4 +4,5 @@ export default express
   .Router()
   .post("/", controller.create)
   .get("/", controller.getAll)
-  .get("/:id", controller.getById);
+  .get("/:id", controller.getById)
+  .put("/:user_id", controller.updateById);
